#feat: hanlde github page

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap" rel="stylesheet">
   <title>Jisr | task</title>
+  <script type="module" crossorigin src="/Assets/index35443.js"></script>
+  <link rel="stylesheet" href="/Assets/index35443.css">
 </head>
 <body class="font-SansArabic">
   <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
+  
   <noscript>
     <div style="text-align: center; margin-top: 50px;">
       <h1>يجب تفعيل الجافا سكربت لتشغيل الموقع</h1>
